--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,6 +2,7 @@
 
   <!-- Header -->
     <header id="header">
+        <link rel="stylesheet" href="../assets/css/main.css" />
       <nav class="left">
         <a href="#menu"><span>Menu</span></a>
       </nav>
@@ -48,7 +49,7 @@
           </div>
         </div>
         <div class="flex-item image fit round">
-          <img src="images/pic01.jpg" alt="" />
+          <img src="../assets/images/pic01.jpg" alt="" />
         </div>
         <div class="flex-item right">
           <div>
@@ -84,7 +85,7 @@
       <div class="inner flex flex-3">
         <div class="flex-item box">
           <div class="image fit">
-            <img src="images/pic02.jpg" alt="" />
+            <img src="../assets/images/pic02.jpg" alt="" />
           </div>
           <div class="content">
             <h3>Consequat</h3>
@@ -93,7 +94,7 @@
         </div>
         <div class="flex-item box">
           <div class="image fit">
-            <img src="images/pic03.jpg" alt="" />
+            <img src="../assets/images/pic03.jpg" alt="" />
           </div>
           <div class="content">
             <h3>Adipiscing</h3>
@@ -102,7 +103,7 @@
         </div>
         <div class="flex-item box">
           <div class="image fit">
-            <img src="images/pic04.jpg" alt="" />
+            <img src="../assets/images/pic04.jpg" alt="" />
           </div>
           <div class="content">
             <h3>Malesuada</h3>
@@ -128,10 +129,10 @@
     </footer>
 
   <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.scrolly.min.js"></script>
+    <script src="../assets/js/skel.min.js"></script>
+    <script src="../assets/js/util.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
