to continue rendering the html

--- a/src/app/elements/elements.component.html
+++ b/src/app/elements/elements.component.html
@@ -1,8 +1,10 @@
 <body class="subpage">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="../assets/css/main.css" />
   <!-- Header -->
     <header id="header">
-        <link rel="stylesheet" href="../assets/css/main.css" />
+
       <nav class="left">
         <a href="#menu"><span>Menu</span></a>
       </nav>
@@ -407,26 +409,26 @@
                 <h3>Image</h3>
 
                 <h4>Fit</h4>
-                <span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+                <span class="image fit"><img src="../assets/images/pic02.jpg" alt="" /></span>
                 <div class="box alt">
                   <div class="row 50% uniform">
-                    <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                    <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                    <div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u$"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
                     <!-- Break -->
-                    <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                    <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                    <div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u$"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
                     <!-- Break -->
-                    <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                    <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                    <div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
+                    <div class="4u$"><span class="image fit"><img src="../assets/images/pic01.jpg" alt="" /></span></div>
                   </div>
                 </div>
 
                 <h4>Left &amp; Right</h4>
-                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis volutpat lorem ipsum dolor sit amet dolor consequat.</p>
-                <p><span class="image right"><img src="images/pic01.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis volutpat lorem ipsum dolor sit amet dolor consequat.</p>
+                <p><span class="image left"><img src="../assets/images/pic01.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis volutpat lorem ipsum dolor sit amet dolor consequat.</p>
+                <p><span class="image right"><img src="../assets/images/pic01.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis volutpat lorem ipsum dolor sit amet dolor consequat.</p>
 
               <!-- Preformatted Code -->
                 <h3>Preformatted</h3>
@@ -446,27 +448,5 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
       </div>
     </section>
-
-  <!-- Footer -->
-    <footer id="footer">
-      <div class="inner">
-        <h2>Get In Touch</h2>
-        <ul class="actions">
-          <li><span class="icon fa-phone"></span> <a href="#">(000) 000-0000</a></li>
-          <li><span class="icon fa-envelope"></span> <a href="#">information@untitled.tld</a></li>
-          <li><span class="icon fa-map-marker"></span> 123 Somewhere Road, Nashville, TN 00000</li>
-        </ul>
-      </div>
-      <div class="copyright">
-        &copy; Untitled. Design <a href="https://templated.co">TEMPLATED</a>. Images <a href="https://unsplash.com">Unsplash</a>.
-      </div>
-    </footer>
-
-  <!-- Scripts -->
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/jquery.scrolly.min.js"></script>
-    <script src="../assets/js/skel.min.js"></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/main.js"></script>
 
 </body>
