--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -21,36 +21,18 @@
               <table>
                 <thead>
                   <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Price</th>
+                    <th>Id</th>
+                    <th>name</th>
+                    <th>Username</th>
+                    <th>email</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>Item 1</td>
-                    <td>Ante turpis integer aliquet porttitor.</td>
-                    <td>29.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 2</td>
-                    <td>Vis ac commodo adipiscing arcu aliquet.</td>
-                    <td>19.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 3</td>
-                    <td> Morbi faucibus arcu accumsan lorem.</td>
-                    <td>29.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 4</td>
-                    <td>Vitae integer tempus condimentum.</td>
-                    <td>19.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 5</td>
-                    <td>Ante turpis integer aliquet porttitor.</td>
-                    <td>29.99</td>
+                  <tr *ngFor="let student of systemStudents">
+                    <td>student.id</td>
+                    <td>student.name</td>
+                    <td>student.username</td>
+                    <td>student.email</td>
                   </tr>
                 </tbody>
                 <tfoot>
