--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,6 +1,8 @@
 <body class="subpage">
   <link rel="stylesheet" href="../assets/css/main.css" />
   <!-- Main -->
+  {{currentId}}
+  {{username}}
     <section id="main" class="wrapper">
       <div class="inner">
         <header class="align-center">
