--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -20,44 +20,24 @@
               <table>
                 <thead>
                   <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Price</th>
+                    <th>Id</th>
+                    <th>Message</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>Item 1</td>
-                    <td>Ante turpis integer aliquet porttitor.</td>
-                    <td>29.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 2</td>
-                    <td>Vis ac commodo adipiscing arcu aliquet.</td>
-                    <td>19.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 3</td>
-                    <td> Morbi faucibus arcu accumsan lorem.</td>
-                    <td>29.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 4</td>
-                    <td>Vitae integer tempus condimentum.</td>
-                    <td>19.99</td>
-                  </tr>
-                  <tr>
-                    <td>Item 5</td>
-                    <td>Ante turpis integer aliquet porttitor.</td>
-                    <td>29.99</td>
-                  </tr>
+                  <tr *ngFor="let message of currentMessages">
+                      <td>{{message.id}}</td>
+                      <td>{{message.messageContent}}</td>
+                    </tr>
                 </tbody>
-                <tfoot>
-                  <tr>
-                    <td colspan="2"></td>
-                    <td>100.00</td>
-                  </tr>
-                </tfoot>
+                <!--
+                  <tfoot>
+                    <tr>
+                      <td colspan="2"></td>
+                      <td>100.00</td>
+                    </tr>
+                  </tfoot>
+                -->
               </table>
             </div>
       </div>
