to view the message based on the student id

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
           <a routerLink="/adminLogin">adminLogin</a><br />
           <a routerLink="/register">register</a><br />
           <a routerLink="/students">students</a><br />
-          <a routerLink="/messages">messages</a><br />
+          <a routerLink="/messages/2">messages</a><br />
           <a routerLink="/message">message</a><br />
           <a routerLink="/elements">elements</a><br />
           <a routerLink="/index">index</a><br />
