--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,17 +15,18 @@
 
         <form method="post" action="#">
           <div class="6u">
-            <input type="text" name="name" id="name" value="" placeholder="Name" />
+            <input type="text" name="username" id="username" value="" placeholder="Username" [(ngModel)]="person.username"/>
           </div>
           <br/>
           <div class="6u">
-            <input type="email" name="email" id="email" value="" placeholder="Email" />
+            <input type="password" name="password" id="password" value="" placeholder="password" [(ngModel)]="person.password"/>
           </div>
           <br/>
             <div class="row uniform">
               <div class="12u$">
                 <ul class="actions">
-                  <li><input type="submit" value="Send Message" /></li>
+                    <li><input type="submit" value="Loging" (click)="doStudentLogin()" /></li>
+                  <li><input type="submit" value="Loging" (click)="doAdminLogin()" /></li>
                   <li><input type="reset" value="Reset" class="alt" /></li>
                 </ul>
               </div>
